--- a/ProyectoFinanciera/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinanciera/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li> <div class="col-sm-1"></div> </li>
                     <li> @Html.ActionLink("El Progreso", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li class="dropdown">
+                    <li class="dropdown clickable">
                         <a class="dropdown-toggle" data-toggle="dropdown">
                             Indicadores Económicos
                             <span class="caret"></span>
