--- a/ProyectoFinanciera/Views/Preguntas/Details.cshtml
+++ b/ProyectoFinanciera/Views/Preguntas/Details.cshtml
@@ -6,8 +6,11 @@
 }
 
 <h2>Detalles de Pregunta</h2>
-
+<br />
 <div>
+    <p>
+        <button class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Respuestas")';return false;">Responder</button>
+    </p>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -39,19 +42,11 @@
     </dl>
 </div>
 
-<div class="row">
-    <div class="col-sm-3">
+
         <p>
-            @Html.ActionLink("Regresar", "Index")
+            @Html.ActionLink("Regresar", "Index")| @Html.ActionLink("Ver Respuestas Relacionadas", "Respuestas", "Respuestas", new { id = Model.ID }, new { @class = "" })
         </p>
-    </div>
-    <div class="col-sm-offset-8">
-        <p>
-            @Html.ActionLink("Agregar Respuesta", "Create", "Respuestas")|
-            @Html.ActionLink("Ver Respuestas Relacionadas", "Respuestas", "Respuestas", new { id = Model.ID}, new { @class=""})
-        </p>
-    </div>
-</div>
+
 
 <p>
 
