--- a/ProyectoFinanciera/Views/Preguntas/Index.cshtml
+++ b/ProyectoFinanciera/Views/Preguntas/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Foro</h2>
+<h2>Consultas</h2>
 <br />
 <p>
     En esta sección puede realizar consultas abiertas que pueden ser respondidas por otros usuarios, así como responder a consultas de otras personas
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-sm-3">
         <p>
-            @Html.ActionLink("Crear una nueva pregunta", "Create")
+            <button class="btn btn-primary" onclick="location.href='@Url.Action("Create")';return false;">Crear una nueva pregunta</button>
         </p>
     </div>
     <div class="col-sm-offset-10">
