--- a/ProyectoFinanciera/Views/Respuestas/Create.cshtml
+++ b/ProyectoFinanciera/Views/Respuestas/Create.cshtml
@@ -6,7 +6,14 @@
 }
 
 <h2>Nueva Respuesta</h2>
-
+<div class="alert alert-success alert-dismissable" id="Mensaje" hidden>
+    <a href="#" class="close" data-dismiss="alert">&times;</a>
+    Respuesta ingresada exitosamete.
+</div>
+<div class="alert alert-danger alert-dismissable" id="Error" hidden>
+    <a href="#" class="close" data-dismiss="alert">&times;</a>
+    Hubo un error, no se pudo ingresar la respuesta.
+</div>
 
 @using (Html.BeginForm())
 {
@@ -18,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Respuesta, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Respuesta, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Respuesta, 10, 40, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Respuesta, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -51,6 +58,16 @@
     @Html.ActionLink("Regresar a la sección de Preguntas", "Index", "Preguntas")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+<script type="text/javascript">
+    $(document).ready(function(){
+
+
+    if ('@ViewBag.message' == "Mensaje") {
+    $("#Mensaje").removeAttr("hidden");
+    }
+    if ('@ViewBag.error' == "Error") {
+    $("#Error").removeAttr("hidden");
+    }
+
+    });
+</script>
