--- a/ProyectoFinanciera/Views/Respuestas/Details.cshtml
+++ b/ProyectoFinanciera/Views/Respuestas/Details.cshtml
@@ -11,13 +11,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Respuesta)
+            @Html.DisplayNameFor(model => model.Preguntas.Pregunta)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Respuesta)
+            @Html.DisplayFor(model => model.Preguntas.Pregunta)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.nombreResponde)
         </dt>
@@ -26,12 +25,13 @@
             @Html.DisplayFor(model => model.nombreResponde)
         </dd>
 
+
         <dt>
-            @Html.DisplayNameFor(model => model.Preguntas.Nombre)
+            @Html.DisplayNameFor(model => model.Respuesta)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Preguntas.Nombre)
+            @Html.DisplayFor(model => model.Respuesta)
         </dd>
 
     </dl>
